--- a/app/src/main/res/layout/adapter_file_list.xml
+++ b/app/src/main/res/layout/adapter_file_list.xml
@@ -10,7 +10,7 @@
         android:orientation="horizontal" >
 
         <ImageView
-            android:id="@+id/show_imageView"
+            android:id="@+id/file_icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/photo_default" />
@@ -28,17 +28,17 @@
                 android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/photo_name"
+                    android:id="@+id/file_name"
                     android:layout_width="137dp"
                     android:layout_height="15dp"
                     android:layout_marginLeft="5dp"
-                    android:text="TextView" />
+                    android:text="未知" />
                 <TextView
-                    android:id="@+id/photo_detail"
+                    android:id="@+id/file_detail"
                     android:layout_width="137dp"
                     android:layout_height="15dp"
                     android:layout_marginLeft="5dp"
-                    android:text="TextView" />
+                    android:text="文件" />
             </LinearLayout>
 
         </RelativeLayout>
