--- a/app/src/main/res/layout/activity_photo_show.xml
+++ b/app/src/main/res/layout/activity_photo_show.xml
@@ -7,10 +7,13 @@
     tools:context=".PhotoShowActivity"
      >
 
+
+
     <com.savy.imageshow.custom.photoview.HackyViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 
 </android.support.constraint.ConstraintLayout>
