--- a/app/src/main/res/layout/adapter_image_show.xml
+++ b/app/src/main/res/layout/adapter_image_show.xml
@@ -7,19 +7,41 @@
     <com.savy.imageshow.custom.photoview.PhotoView
         android:id="@+id/photo_show_imageview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:layout_height="fill_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
 
     <Button
         android:id="@+id/photo_delete_button"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
+        android:layout_width="70dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="删除"
-        android:textSize="24dp"
-        android:textColor="#f6ab00"
-        android:background="#919191"
-        android:alpha="0.3"
+        android:background="@color/white"
+        android:alpha="0"
+        />
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/delete"
+        android:scaleType="fitCenter"
+        />
+
+    <TextView
+        android:id="@+id/photo_title_textview"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="12dp"
+        android:textColor="@color/grayFont"
+        android:gravity="center"
+        android:singleLine="false"
         />
 </RelativeLayout>
