加入配置页面
加入配置页面，优化UI

--- a/app/src/main/res/layout/activity_photo_show.xml
+++ b/app/src/main/res/layout/activity_photo_show.xml
@@ -16,4 +16,14 @@
         android:layout_height="match_parent"
         />
 
+    <ImageView
+        android:id="@+id/backImageView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerInParent="true"
+        android:clickable="true"
+        android:duplicateParentState="true"
+        android:focusable="true"
+        android:src="@drawable/back_gray" />
+
 </android.support.constraint.ConstraintLayout>
