--- a/app/src/main/res/layout/layout_title_back.xml
+++ b/app/src/main/res/layout/layout_title_back.xml
@@ -22,14 +22,35 @@
             android:focusable="true" >
 
             <ImageView
-                android:id="@+id/activityBackImage"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:id="@+id/activityBackImageView"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_centerInParent="true"
                 android:clickable="false"
                 android:duplicateParentState="true"
                 android:focusable="false"
                 android:src="@drawable/back" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/activitySetting"
+            android:layout_width="40dip"
+            android:layout_height="fill_parent"
+            android:layout_alignParentRight="true"
+            android:clickable="true"
+            android:descendantFocusability="blocksDescendants"
+            android:focusable="true"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/activitySettingImageView"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerInParent="true"
+                android:clickable="false"
+                android:duplicateParentState="true"
+                android:focusable="false"
+                android:src="@drawable/setting" />
         </RelativeLayout>
 
         <TextView
