--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -19,9 +19,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/layout_title"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        android:layout_marginTop="10dip"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/shape_service_bg"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -30,29 +30,29 @@
         <TableRow>
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="50dip"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
                 android:layout_column="0"
-                android:layout_marginLeft="8dip"
-                android:scaleType="center"
-                android:src="@drawable/photo_default" />
+                android:layout_marginLeft="8dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ico_ip" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_column="1"
-                android:layout_marginLeft="10dip"
-                android:layout_marginRight="10dip"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:textColor="#000000"
                 android:text="IP地址" />
 
             <TextView
-                android:layout_width="1dip"
+                android:layout_width="1dp"
                 android:layout_height="fill_parent"
                 android:layout_column="2"
-                android:layout_marginBottom="4dip"
-                android:layout_marginTop="4dip"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="4dp"
                 android:background="#e3e2e2" />
 
             <EditText
@@ -60,11 +60,11 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_column="3"
-                android:layout_marginLeft="10dip"
+                android:layout_marginLeft="10dp"
                 android:background="@null"
                 android:gravity="left|center_vertical"
                 android:singleLine="true"
-                android:inputType="numberSigned"
+                android:inputType="textVisiblePassword"
                 android:hint="请输入IP"
                 android:textColor="#000000"
                 />
@@ -72,35 +72,35 @@
 
         <TextView
             android:layout_width="fill_parent"
-            android:layout_height="1dip"
+            android:layout_height="1dp"
             android:background="#e3e2e2" />
 
         <TableRow>
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="50dip"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
                 android:layout_column="0"
-                android:layout_marginLeft="8dip"
-                android:scaleType="center"
-                android:src="@drawable/photo_default" />
+                android:layout_marginLeft="8dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ico_username" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_column="1"
-                android:layout_marginLeft="10dip"
-                android:layout_marginRight="10dip"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:textColor="#000000"
                 android:text="用户名" />
 
             <TextView
-                android:layout_width="1dip"
+                android:layout_width="1dp"
                 android:layout_height="fill_parent"
                 android:layout_column="2"
-                android:layout_marginBottom="4dip"
-                android:layout_marginTop="4dip"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="4dp"
                 android:background="#e3e2e2" />
 
             <EditText
@@ -108,7 +108,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_column="3"
-                android:layout_marginLeft="10dip"
+                android:layout_marginLeft="10dp"
                 android:background="@null"
                 android:gravity="left|center_vertical"
                 android:textColor="#000000"
@@ -120,35 +120,36 @@
 
         <TextView
             android:layout_width="fill_parent"
-            android:layout_height="1dip"
+            android:layout_height="1dp"
             android:background="#e3e2e2" />
 
         <TableRow>
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="50dip"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
                 android:layout_column="0"
-                android:layout_marginLeft="8dip"
-                android:scaleType="center"
-                android:src="@drawable/photo_default" />
+                android:layout_marginLeft="8dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ico_password"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_column="1"
-                android:layout_marginLeft="10dip"
-                android:layout_marginRight="10dip"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:textColor="#000000"
                 android:text="登录密码" />
 
             <TextView
-                android:layout_width="1dip"
+                android:layout_width="1dp"
                 android:layout_height="fill_parent"
                 android:layout_column="2"
-                android:layout_marginBottom="4dip"
-                android:layout_marginTop="4dip"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="4dp"
                 android:background="#e3e2e2" />
 
             <EditText
@@ -156,7 +157,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_column="3"
-                android:layout_marginLeft="10dip"
+                android:layout_marginLeft="10dp"
                 android:background="@null"
                 android:gravity="left|center_vertical"
                 android:textColor="#000000"
@@ -168,16 +169,41 @@
     </TableLayout>
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/commitButton"
         android:layout_width="fill_parent"
-        android:layout_height="50dip"
-        android:layout_below="@id/banner02"
-        android:layout_marginLeft="20dip"
-        android:layout_marginRight="20dip"
-        android:layout_marginTop="50dip"
-        android:background="#fe7f4c"
-        android:text="登录"
+        android:layout_height="50dp"
+        android:layout_below="@id/settingTableLayout"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="50dp"
+        android:background="@color/green"
+        android:text="设置"
         android:textColor="#FFFFFF"
         android:textSize="18dp" />
+
+    <Button
+        android:id="@+id/clearButton"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_below="@id/commitButton"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
+        android:background="@color/red"
+        android:text="清空"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp" />
+
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:gravity="center"
+        android:textColor="@color/grayFont"
+        android:layout_alignParentBottom="true"
+        android:textSize="12dp"
+        android:text="请设置电脑的ip地址、登录的用户名和密码！" />
 
 </RelativeLayout>
