--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -10,9 +10,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:background="@color/black"
+        android:background="@color/white"
         android:flipInterval="30"
         android:persistentDrawingCache="animation"
         android:visibility="gone"
+        />
+
+    <!-- 需要扩展app命名空间 -->
+    <com.savy.imageshow.custom.BannerIndicatorView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/indicatorView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        app:app_cell_count="4"
+        app:app_current_position="0"
+        app:app_cell_radius="8dp"
+        app:app_cell_margin="20dp"
+        app:app_normal_color="@color/whiteBackage"
+        app:app_selected_color="@color/golden"
+        app:app_indicator_style="CIRCLE"
+        android:layout_centerHorizontal="true"
         />
 </RelativeLayout>
