--- a/app/src/main/res/layout/activity_photo_show.xml
+++ b/app/src/main/res/layout/activity_photo_show.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PhotoShowActivity"
+
      >
 
 
@@ -14,6 +15,7 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/whiteBackage"
         />
 
     <ImageView
